# asyncgui

./: .gitignore  LICENSE  Makefile  Notes.md  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: lint-and-unittest.yml  python-package.yml  release.yml
asyncgui/: __init__.py  _core.py  _multierror.py  exceptions.py  structured_concurrency.py  unstructured_concurrency.py
asyncgui/adaptor/: to_trio.py
asyncgui/testing/: __init__.py  _scheduler.py  scheduler.py
doc/: conf.py  index.rst
docs/: .buildinfo  genindex.html  index.html  intro-ja.html  intro.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  structured-concurrency-ja.html  structured-concurrency.html  tips.html  usage-ja.html  usage.html
docs/.doctrees/: environment.pickle  index.doctree  intro-ja.doctree  intro.doctree  reference.doctree  structured-concurrency-ja.doctree  structured-concurrency.doctree  tips.doctree  usage-ja.doctree  usage.doctree
docs/_sources/: index.rst.txt  intro-ja.rst.txt  intro.rst.txt  reference.rst.txt  structured-concurrency-ja.rst.txt  structured-concurrency.rst.txt  tips.rst.txt  usage-ja.rst.txt  usage.rst.txt
docs/_static/: documentation_options.js
examples/: working_with_sched.py
investigation/: Box_vs_ExclusiveBox.py  Event_vs_ExclusiveEvent.py  GeneratorExit_instance_is_replaced_with_another_one.py  current_task_enlarges_the_call_stack.py
sphinx/: async-generators-ja.rst  conf.py  index.rst  intro-ja.rst  intro.rst  reference.rst  replicate-old-ones-with-nursery.py  replicate-with-nursery.py  structured-concurrency-ja.rst  structured-concurrency.rst  tips.rst  usage-ja.rst  usage.rst
sphinx/figure/: nested-tasks.json
src/: asyncgui.py
src/asyncgui/: __init__.py
tests/: test_AsyncBox.py  test_AsyncEvent.py  test_Box.py  test_Counter.py  test_Event.py  test_ExclusiveBox.py  test_ExclusiveEvent.py  test_StatefulEvent.py  test_Task.py  test_TaskCounter.py  test_cancel_scope.py  test_core.py  test_core_Task.py  test_core_cancel_scope.py  test_core_event.py  test_core_install.py  test_core_start.py  test_core_task.py  test_etc.py  test_move_on_when.py  test_move_on_when_all.py  test_move_on_when_any.py  test_nursery.py  test_run_as_daemon.py  test_run_as_daemons.py  test_run_as_main.py  test_run_as_primary.py  test_run_as_secondary.py  test_safe_cleanup.py  test_start.py  test_unstructured_concurrency.py  test_utils.py  test_utils_Event.py  test_wait_all_cm.py  test_wait_any_cm.py  test_wait_xxx_cm.py
tests/adaptor/to_trio/: test_awaitable_to_coro.py  test_callable_to_asyncfn.py  test_run_awaitable.py
tests/misc/: test_async_generators_cleanup_timing.py  test_how_coroutines_work.py
tests/structured_concurrency/: test_run_and_cancelling.py
tests/structured_concurrency/and/: test_complicated_situation_1.py  test_complicated_situation_2.py  test_nested_and_protected.py  test_simple_situation.py
tests/structured_concurrency/or/: test_complicated_situation_1.py  test_complicated_situation_2.py  test_nested_and_protected.py  test_simple_situation.py
tests/structured_concurrency/wait_all/: test_nested_and_protected.py  (+3 more)
tests/testing/: test_scheduler.py
tests/utils/: test_Event.py  test_ISignal.py  test_OnetimeBox.py  test_nursery.py  test_run_and_cancelling.py  test_wait_any_cm.py  test_wait_xxx_cm.py
tests/wait_all/: test_complicated_situation_1.py  test_complicated_situation_2.py  test_nested_and_protected.py  test_simple_situation.py
tests/wait_any/: test_complicated_situation_1.py  test_complicated_situation_2.py  test_nested_and_protected.py  test_simple_situation.py
(+6 files in other folders)
