[tool.poetry]
name = "asyncgui"
version = "0.6.0.dev0"
description = "async/await without event-loop"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/gottadiveintopython/asyncgui'
homepage = 'https://github.com/gottadiveintopython/asyncgui'
keywords = ['async', ]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "asyncgui.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
exceptiongroup = {version = "^1.0.4", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
