[project]
name = "asyncgui"
version = "0.10.0.dev0"
description = "A minimalistic async library that focuses on fast responsiveness"
authors = [{ name = "Nattōsai Mitō", email = "flow4re2c@gmail.com" }]
requires-python = ">=3.10,<4.0"
license = "MIT"
readme = "README.md"
keywords = ["async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = ["exceptiongroup>=1.0.4,<2 ; python_version < '3.11'"]

[project.urls]
Repository = "https://github.com/asyncgui/asyncgui"

[dependency-groups]
dev = [
    "pytest>=7.0.1,<8",
    "flake8>=6.0.0,<7",
]
doc = [
    "sphinx>=7.0.0,<8",
    "sphinx-tabs>=3.4.1,<4",
    "furo>=2023.9.10,<2024",
]

[tool.uv]
default-groups = ["dev", ]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--maxfail=4 --strict-markers"
